--- a/web.html
+++ b/web.html
@@ -10,6 +10,7 @@
 		var marker = null;
 		var ruta = null;
 		var markers = [];
+		var motorizados = {};
 		var map;
 		socket.emit('who-i-am');
 		socket.on('you-are', function (msg){
@@ -24,39 +25,40 @@
 			document.getElementById("cell_id").value = msg;
 		});
 		socket.on('gps', function (msg){
-			console.log(msg);
-			markers.push(msg);
-			var myLatLng = msg;
-			if (marker == null || true){
-				marker = new google.maps.Marker({
-					position: myLatLng,
-					map: map,
-					title: 'my ID 4545646 ',
-					animation: google.maps.Animation.DROP
-				});
-				map.setCenter(myLatLng);
 
-				ruta = new google.maps.Polyline({
-				    path: markers,
-				    geodesic: true,
-				    strokeColor: '#FF0000',
-				    strokeOpacity: 1.0,
-				    strokeWeight: 2
-				});
-				ruta.setMap(map);
-			}else{
-				var cityCircle = new google.maps.Circle({
-			      strokeColor: '#0B9444',
-			      strokeOpacity: 1,
-			      strokeWeight: 2,
-			      fillColor: '#8DC63E',
-			      fillOpacity: 0.8,
-			      map: map,
-			      center: marker.getPosition(),
-			      radius: 10
-			    });
-				marker.setPosition(myLatLng);
+			if (motorizados[msg.django_id] == undefined) {
+				motorizados[msg.django_id] = {markers: [], marker: null};
 			}
+
+			if(motorizados[msg.django_id].marker){
+				motorizados[msg.django_id].marker.setMap(null);
+				motorizados[msg.django_id].marker = null;
+			}
+
+			var cityCircle = new google.maps.Circle({
+			    strokeColor: motorizados[msg.django_id].detenido?'#FF0000':'#0B9444',
+			    strokeOpacity: 1,
+			    strokeWeight: 2,
+			    fillColor: motorizados[msg.django_id].detenido?	'#FF0000':'#8DC63E',
+			    fillOpacity: 0.8,
+			    map: map,
+			    center: msg,
+			    radius: 10
+			});
+
+			motorizados[msg.django_id].markers.push(cityCircle);
+
+			motorizados[msg.django_id].marker = new google.maps.Marker({
+				position: msg,
+				map: map,
+				title: 'my ID ' + msg.django_id,
+				animation: google.maps.Animation.DROP
+			});
+			map.setCenter(msg);
+		});
+		socket.on('motorizado-detenido', function(message) {
+			console.log(message);
+			motorizados[message.identificador].detenido = true;
 		});
 		var map;
 		function initMap() {
