--- a/web.html
+++ b/web.html
@@ -51,6 +51,7 @@
 			motorizados[msg.django_id].marker = new google.maps.Marker({
 				position: msg,
 				map: map,
+				icon: 'img/pin.svg',
 				title: 'my ID ' + msg.django_id,
 				animation: google.maps.Animation.DROP
 			});
